--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,44 @@
-.App {
+.App{
+  background-color: white;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.drum-pad{
+  background-color: #c291c0;
+  font-size: 30px;
+  height: 100px;
+  width: 100px;
+  border-radius: 5px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-content: center;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+#drum-machine {
+  text-align: center;
+  background-color: #e6c8e3;
+  width: 400px;
+  height: 400px;
+  margin: auto;
+  margin-top:30px;
+  border-radius: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#pad-container{
+  margin-top: 10px;
+  display: grid;
+  grid-template-columns: 100px 100px 100px;
+  grid-gap: 10px;
+  justify-content: center;
+}
+
+#display{
+  background-color: #f4e2f4;
+  border-radius: 5px;
+  font-size: 20px;
+  width: 300px;
+  padding: 2%;
+  margin: auto;
+  border-top: 10px solid #e6c8e3;
 }
